--- a/app/index.html
+++ b/app/index.html
@@ -18,7 +18,7 @@
   <header class="main-header">
     <div class="container">
       <a href="#" class=".logo-link">
-        <img src="" alt="logo" width="130" height="40" >
+        <img src="assets/images/logo.png" alt="logo" width="130" height="40" >
       </a>
       <input type="search" name="search" class="search-input">
       <a href="#">chat</a>
@@ -29,69 +29,69 @@
 
   <aside class="sidebar">
     <nav>
-        <ul class="sidebar-menu">
-          <li class="menu-item">
-            <a href="#">Feed</a>            
-          </li>
-          <li class="menu-item">
-            <a href="#">Ask a Collegue</a>            
-          </li>
-          <li class="menu-item">
-            <a href="#">Companies</a>            
-          </li>
-          <li class="menu-item">
-            <a href="#">Service derectory</a>            
-          </li>
-        </ul>
-      </nav>
+      <ul class="sidebar-menu">
+        <li class="menu-item">
+          <a href="#">Feed</a>            
+        </li>
+        <li class="menu-item">
+          <a href="#">Ask a Collegue</a>            
+        </li>
+        <li class="menu-item">
+          <a href="#">Companies</a>            
+        </li>
+        <li class="menu-item">
+          <a href="#">Service derectory</a>            
+        </li>
+      </ul>
+    </nav>
 
-      <section class="advertisement-section">
-        <h2 class="section-header">Advertisement</h2>
-        <div class="adv-img-wrapper">
-          <img src="assets/images/advertisement_poster-1.jpg" alt="advertisement img" width="210" height="300">
-        </div>
-        <div class="adv-footer">Ads By Denteez.com</div>
-      </section>
+    <section class="advertisement-section">
+      <h2 class="section-header">Advertisement</h2>
+      <div class="adv-img-wrapper">
+        <img src="assets/images/advertisement_poster-1.jpg" alt="advertisement img" width="210" height="300">
+      </div>
+      <div class="adv-footer">Ads By Denteez.com</div>
+    </section>
 
-      <section class="companies-section">
-        <h2 class="section-header">Featured Companies</h2>
-        <a href="#">See All</a>
-        <ul class="companies-list">
-          <li class="companies-item">
-            <div class="item-img-wrapper">
-              <img src="assets/images/company_1_small.jpg" alt="img" width="80" height="80">
-            </div>
-            <div class="item-name">Company Name</div>
-            <div class="item-role">Manufacturer</div>
-            <div class="item-location">Belgrade, Serbia</div>
-            <a href="#" class="item-link follow-link">Follow Now</a>
-          </li>
-          <li class="companies-item">
-            <div class="item-img-wrapper">
-              <img src="assets/images/company_2_small.jpg" alt="img" width="80" height="80">
-            </div>
-            <div class="item-name">Company Name</div>
-            <div class="item-role">Service Provider</div>
-            <div class="item-location">New York, USA</div>
-            <a href="#" class="item-link follow-link">Follow Now</a>
-          </li>
-          <li class="companies-item">
-            <div class="item-img-wrapper">
-              <img src="assets/images/company_3_small.jpg" alt="img" width="80" height="80">
-            </div>
-            <div class="item-name">Company Name</div>
-            <div class="item-role">Supplier</div>
-            <div class="item-location">London, England</div>
-            <a href="#" class="item-link follow-link">Follow Now</a>
-          </li>
-        </ul>
-      </section>
+    <section class="companies-section">
+      <h2 class="section-header">Featured Companies</h2>
+      <a href="#">See All</a>
+      <ul class="companies-list">
+        <li class="companies-item">
+          <div class="item-img-wrapper">
+            <img src="assets/images/company_1_small.jpg" alt="img" width="80" height="80">
+          </div>
+          <div class="item-name">Company Name</div>
+          <div class="item-role">Manufacturer</div>
+          <div class="item-location">Belgrade, Serbia</div>
+          <a href="#" class="item-link follow-link">Follow Now</a>
+        </li>
+        <li class="companies-item">
+          <div class="item-img-wrapper">
+            <img src="assets/images/company_2_small.jpg" alt="img" width="80" height="80">
+          </div>
+          <div class="item-name">Company Name</div>
+          <div class="item-role">Service Provider</div>
+          <div class="item-location">New York, USA</div>
+          <a href="#" class="item-link follow-link">Follow Now</a>
+        </li>
+        <li class="companies-item">
+          <div class="item-img-wrapper">
+            <img src="assets/images/company_3_small.jpg" alt="img" width="80" height="80">
+          </div>
+          <div class="item-name">Company Name</div>
+          <div class="item-role">Supplier</div>
+          <div class="item-location">London, England</div>
+          <a href="#" class="item-link follow-link">Follow Now</a>
+        </li>
+      </ul>
+    </section>
 
-      <footer class="main-footer">
-        <div class="copyright">Denteez Copyright 2015</div>
-        <a href="#" class="footer-link">Terms of use</a>
-        <a href="#" class="footer-link">Privacy Policy</a>
-      </footer>
+    <footer class="main-footer">
+      <div class="copyright">Denteez Copyright 2015</div>
+      <a href="#" class="footer-link">Terms of use</a>
+      <a href="#" class="footer-link">Privacy Policy</a>
+    </footer>
   </aside>
 
   <main>
@@ -99,93 +99,156 @@
     <button>Add New Service</button>
 
     <ul class="services-list">
-      <li class="service-item">Accountancy</li>
-      <li class="service-item">Associations</li>
-      <li class="service-item">Buy/Sell Dental Practice</li>
-      <li class="service-item">Clinical Waste Collection</li>
-      <li class="service-item">Computer Service</li>
-      <li class="service-item">CPR/Basic Life Support Training</li>
-      <li class="service-item">Dental Recruitment</li>
-      <li class="service-item">Dental Software</li>
-      <li class="service-item">Electrical Safety And Testing</li>
-      <li class="service-item">Marketing</li>
-      <li class="service-item">Others</li>
-      <li class="service-item">Repairs</li>
-      <li class="service-item">Solicitors</li>
-      <li class="service-item">Surgery Design</li>
-      <li class="service-item">Training & Courses</li>
-      <li class="service-item">Web Designers</li>
-      <li class="service-item">Cleaning Agencies</li>
-      <li class="service-item">Dental Chair Recovery</li>
-      <li class="service-item">Eqquipment Engineering</li>
-      <li class="service-item">Selling Gold</li>
-      <li class="service-item">Uniform & Workwear</li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Accountancy</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Associations</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Buy/Sell Dental Practice</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Clinical Waste Collection</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Computer Service</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">CPR/Basic Life Support Training</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Dental Recruitment</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Dental Software</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Electrical Safety And Testing</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Marketing</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Others</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Repairs</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Solicitors</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Surgery Design</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Training & Courses</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Web Designers</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Cleaning Agencies</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Dental Chair Recovery</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Eqquipment Engineering</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Selling Gold</div>
+      </li>
+      <li class="service-item">
+        <div class="service-icon"></div>
+        <div class="service-name">Uniform & Workwear</div>
+      </li>
     </ul>
   </main>
 
   <aside class="sidebar">
     <section class="people-section">
-        <h2 class="section-header">People you may know</h2>
-        <a href="#">See All</a>
-        <ul class="people-list">
-          <li class="people-item">
+      <h2 class="section-header">People you may know</h2>
+      <a href="#">See All</a>
+      <ul class="people-list">
+        <li class="people-item">
           <div class="item-name">Dennis Adams</div>
-            <div class="item-img-wrapper">
-              <img src="assets/images/user_1_small.jpg" alt="img" width="80" height="80">
-            </div>            
-            <div class="item-role">Dentist(Practice Owner)</div>
-            <div class="item-location">London, England</div>
-            <a href="#" class="item-link follow-link">Add Friend</a>
-          </li>
-          <li class="people-item">
-            <div class="item-name">Mary Carpenter</div>
-            <div class="item-img-wrapper">
-              <img src="assets/images/user_2_small.jpg" alt="img" width="80" height="80">
-            </div>            
-            <div class="item-role">Dentist(Practice Owner)</div>
-            <div class="item-location">Belgrade, Serbia</div>
-            <a href="#" class="item-link follow-link">Add Friend</a>
-          </li>
-          <li class="people-item">
-            <div class="item-name">Danielle Salazar</div>
-            <div class="item-img-wrapper">
-              <img src="assets/images/user_3_small.jpg" alt="img" width="80" height="80">
-            </div>
-            <div class="item-role">Dentist(Practice Owner)</div>
-            <div class="item-location">Paris, France</div>
-            <a href="#" class="item-link follow-link">Add Friend</a>
-          </li>
-        </ul>
-      </section>
+          <div class="item-img-wrapper">
+            <img src="assets/images/user_1_small.jpg" alt="img" width="80" height="80">
+          </div>            
+          <div class="item-role">Dentist(Practice Owner)</div>
+          <div class="item-location">London, England</div>
+          <a href="#" class="item-link follow-link">Add Friend</a>
+        </li>
+        <li class="people-item">
+          <div class="item-name">Mary Carpenter</div>
+          <div class="item-img-wrapper">
+            <img src="assets/images/user_2_small.jpg" alt="img" width="80" height="80">
+          </div>            
+          <div class="item-role">Dentist(Practice Owner)</div>
+          <div class="item-location">Belgrade, Serbia</div>
+          <a href="#" class="item-link follow-link">Add Friend</a>
+        </li>
+        <li class="people-item">
+          <div class="item-name">Danielle Salazar</div>
+          <div class="item-img-wrapper">
+            <img src="assets/images/user_3_small.jpg" alt="img" width="80" height="80">
+          </div>
+          <div class="item-role">Dentist(Practice Owner)</div>
+          <div class="item-location">Paris, France</div>
+          <a href="#" class="item-link follow-link">Add Friend</a>
+        </li>
+      </ul>
+    </section>
 
-      <section class="products-section">
-        <h2 class="section-header">Featured Products</h2>
-        <a href="#">See All</a>
-        <ul class="products-list">
-          <li class="product-item">
+    <section class="products-section">
+      <h2 class="section-header">Featured Products</h2>
+      <a href="#">See All</a>
+      <ul class="products-list">
+        <li class="product-item">
           <div class="item-name">Product Name</div>
-            <div class="item-img-wrapper">
-              <img src="assets/images/product_1_small.jpg" alt="img" width="80" height="80">
-            </div>            
-            <div class="item-description">Product Short Description. The quick brown fox jumps over the lazy dog.</div>
-          </li>
-          <li class="product-item">
-            <div class="item-name">Product Name</div>
-            <div class="item-img-wrapper">
-              <img src="assets/images/product_2_small.jpg" alt="img" width="80" height="80">
-            </div>            
-            <div class="item-description">Product Short Description. The quick brown fox jumps over the lazy dog.</div>
-          </li>
-        </ul>
-      </section>
+          <div class="item-img-wrapper">
+            <img src="assets/images/product_1_small.jpg" alt="img" width="80" height="80">
+          </div>            
+          <div class="item-description">Product Short Description. The quick brown fox jumps over the lazy dog.</div>
+        </li>
+        <li class="product-item">
+          <div class="item-name">Product Name</div>
+          <div class="item-img-wrapper">
+            <img src="assets/images/product_2_small.jpg" alt="img" width="80" height="80">
+          </div>            
+          <div class="item-description">Product Short Description. The quick brown fox jumps over the lazy dog.</div>
+        </li>
+      </ul>
+    </section>
 
-      <section class="advertisement-section">
-        <h2 class="section-header">Advertisement</h2>
-        <div class="adv-img-wrapper">
-          <img src="assets/images/advertisement_poster-2.jpg" alt="advertisement img" width="210" height="300">
-        </div>
-        <div class="adv-footer">Ads By Denteez.com</div>
-      </section>
+    <section class="advertisement-section">
+      <h2 class="section-header">Advertisement</h2>
+      <div class="adv-img-wrapper">
+        <img src="assets/images/advertisement_poster-2.jpg" alt="advertisement img" width="210" height="300">
+      </div>
+      <div class="adv-footer">Ads By Denteez.com</div>
+    </section>
   </aside>
 
 
