--- a/app/index.html
+++ b/app/index.html
@@ -60,7 +60,7 @@
       <section class="featured-companies-section">
         <h4 class="section-header">Featured Companies</h4>
         <a href="#" class="see-all-link">See All</a>
-        <ul class="companies-list">
+        <ul class="list companies-list">
           <li class="companies-item clearfix">
             <div class="item-img-wrapper left">
               <a href="#" class="item-img-link">
@@ -108,7 +108,7 @@
       <section class="people-section">
         <h4 class="section-header">People you may know</h4>
         <a href="#" class="see-all-link">See All</a>
-        <ul class="people-list">
+        <ul class="list people-list">
           <li class="people-item clearfix">
             <div class="item-name">Dennis Adams</div>
             <div class="item-img-wrapper left">
@@ -148,7 +148,7 @@
       <section class="featured-products-section">
         <h4 class="section-header">Featured Products</h4>
         <a href="#" class="see-all-link">See All</a>
-        <ul class="products-list">
+        <ul class="list products-list">
           <li class="product-item clearfix">
             <div class="item-name">Product Name</div>
             <div class="item-img-wrapper left">
