Pixel Perfect for header

--- a/app/index.html
+++ b/app/index.html
@@ -14,18 +14,24 @@
 <body>
   <header class="main-header">
     <div class="wrapper">
-      <a href="#" class="logo-link">
-        <img src="images/logo.png" alt="logo" width="130" height="40" >
-      </a>           
-      <a href="#" class="user-link">
-        <img src="images/user_avatar_small.jpg" alt="user_avatar" width="34" height="34" class="user-avatar">
-        <div class="user-name">Maximillian Beekeeper</div>
-      </a>
-      <div class="icons-link-wrapper">
-        <a href="#" class="notifications-link">Notifications</a>
-        <a href="#" class="chat-link">Chat</a>        
-      </div>
-      <input type="text" name="search" placeholder="Company name" class="search-input">
+      <div class="header-content">
+        <a href="#" class="logo-link">
+          <img src="images/logo.png" alt="logo" >
+        </a>            
+        <a href="#" class="user-link">
+          <div class="user-avatar-wrapper">
+            <img src="images/user_avatar_small.jpg" alt="user_avatar" class="user-avatar">
+          </div>
+          <div class="user-name">Maximillian Beekeeper</div>
+        </a>
+        <div class="icons-link-wrapper">
+          <a href="#" class="notifications-link">Notifications</a>
+          <a href="#" class="chat-link">Chat</a>        
+        </div>
+        <div class="search-wrapper">
+          <input type="text" name="search" placeholder="Company name" class="search-input">
+        </div>
+      </div>          
     </div>    
   </header>
 
@@ -112,8 +118,8 @@
           <li class="people-item clearfix">
             <div class="item-name">Dennis Adams</div>
             <div class="item-img-wrapper left">
-            <a href="#" class="item-img-link">
-              <img src="images/user_1_small.jpg" alt="img" width="80" height="80">
+              <a href="#" class="item-img-link">
+                <img src="images/user_1_small.jpg" alt="img" width="80" height="80">
               </a>
             </div>            
             <div class="item-role">Dentist(Practice Owner)</div>
@@ -123,8 +129,8 @@
           <li class="people-item clearfix">
             <div class="item-name">Mary Carpenter</div>
             <div class="item-img-wrapper left">
-            <a href="#" class="item-img-link">
-              <img src="images/user_2_small.jpg" alt="img" width="80" height="80">
+              <a href="#" class="item-img-link">
+                <img src="images/user_2_small.jpg" alt="img" width="80" height="80">
               </a>
             </div>            
             <div class="item-role">Dentist(Practice Owner)</div>
@@ -134,8 +140,8 @@
           <li class="people-item clearfix">
             <div class="item-name">Danielle Salazar</div>
             <div class="item-img-wrapper left">
-            <a href="#" class="item-img-link">
-              <img src="images/user_3_small.jpg" alt="img" width="80" height="80">
+              <a href="#" class="item-img-link">
+                <img src="images/user_3_small.jpg" alt="img" width="80" height="80">
               </a>
             </div>
             <div class="item-role">Dentist(Practice Owner)</div>
@@ -152,8 +158,8 @@
           <li class="product-item clearfix">
             <div class="item-name">Product Name</div>
             <div class="item-img-wrapper left">
-            <a href="#" class="item-img-link">
-              <img src="images/product_1_small.jpg" alt="img" width="80" height="80">
+              <a href="#" class="item-img-link">
+                <img src="images/product_1_small.jpg" alt="img" width="80" height="80">
               </a>
             </div>            
             <div class="item-description">Product Short Description.<br>The quick brown fox jumps over the lazy dog.</div>
@@ -161,8 +167,8 @@
           <li class="product-item clearfix">
             <div class="item-name">Product Name</div>
             <div class="item-img-wrapper left">
-            <a href="#" class="item-img-link">
-              <img src="images/product_2_small.jpg" alt="img" width="80" height="80">
+              <a href="#" class="item-img-link">
+                <img src="images/product_2_small.jpg" alt="img" width="80" height="80">
               </a>
             </div>            
             <div class="item-description">Product Short Description.<br>The quick brown fox jumps over the lazy dog.</div>
