--- a/app/index.html
+++ b/app/index.html
@@ -5,33 +5,37 @@
   <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
   <title>abz.test</title>
   
-  <!-- FONTS -->
-  
   <!-- CSS -->
-  <link rel="stylesheet" type="text/css" href="main.min.css">
+  <link rel="stylesheet" type="text/css" href="stylesheets/application.min.css">
 </head>
 
 <body>
   <header class="main-header">
     <div class="wrapper">
       <div class="header-content">
-        <a href="#" class="logo-link">
-          <img src="images/logo.png" alt="logo" >
-        </a>            
-        <a href="#" class="user-link">
-          <div class="user-avatar-wrapper">
-            <img src="images/user_avatar_small.jpg" alt="user_avatar" class="user-avatar">
+        <div class="left-column ">
+          <a href="#" class="logo-link">
+            <img src="images/logo.png" alt="logo" width="130" height="40">
+          </a>
+          <div class="icons-link-wrapper">
+            <a href="#" class="notifications-link">Notifications</a>
+            <a href="#" class="chat-link">Chat</a>        
           </div>
-          <div class="user-name">Maximillian Beekeeper</div>
-        </a>
-        <div class="icons-link-wrapper">
-          <a href="#" class="notifications-link">Notifications</a>
-          <a href="#" class="chat-link">Chat</a>        
+          <div class="search-wrapper">
+            <input type="text" name="search" placeholder="Company Name" class="search-input">
+          </div> 
         </div>
-        <div class="search-wrapper">
-          <input type="text" name="search" placeholder="Company name" class="search-input">
+
+        <div class="right-column ">
+            <a href="#" class="user-link">
+              <div class="user-avatar-wrapper">
+                <img src="images/user_avatar_small.jpg" alt="user_avatar" class="user-avatar">
+              </div>              
+              <span class="user-name">Maximillian Beekeeper</span>
+            </a>
         </div>
-      </div>          
+      </div>  
+
     </div>    
   </header>
 
@@ -44,7 +48,7 @@
             <a href="#" class="feed-link">Feed</a>            
           </li>
           <li class="menu-item">
-            <a href="#" class="ask-link">Ask a Collegue</a>            
+            <a href="#" class="ask-link">Ask a Colleague</a>            
           </li>
           <li class="menu-item">
             <a href="#" class="companies-link">Companies</a>            
@@ -58,7 +62,9 @@
       <section class="advertisement-section">
         <h4 class="section-header">Advertisement</h4>
         <div class="adv-img-wrapper">
-          <img src="images/advertisement_poster-1.jpg" alt="advertisement img" width="210" height="300">
+          <a href="#">
+            <img src="images/advertisement_poster-1.jpg" alt="advertisement img" width="210" height="300">
+          </a>
         </div>
         <footer class="adv-footer">Ads By Denteez.com</footer>
       </section>
@@ -73,7 +79,7 @@
                 <img src="images/company_1_small.jpg" alt="img" width="80" height="80">
               </a>              
             </div>
-            <div class="item-name">Company Name</div>
+            <div class="item-name"><a href="#" class="item-link">Company Name</a></div>
             <div class="item-role">Manufacturer</div>
             <div class="item-location">Belgrade, Serbia</div>
             <a href="#" class="follow-link">Follow Now</a>
@@ -84,7 +90,7 @@
                 <img src="images/company_2_small.jpg" alt="img" width="80" height="80">
               </a>
             </div>
-            <div class="item-name">Company Name</div>
+            <div class="item-name"><a href="#" class="item-link">Company Name</a></div>
             <div class="item-role">Service Provider</div>
             <div class="item-location">New York, USA</div>
             <a href="#" class="follow-link">Follow Now</a>
@@ -95,7 +101,7 @@
                 <img src="images/company_3_small.jpg" alt="img" width="80" height="80">
               </a>
             </div>
-            <div class="item-name">Company Name</div>
+            <div class="item-name"><a href="#" class="item-link">Company Name</a></div>
             <div class="item-role">Supplier</div>
             <div class="item-location">London, England</div>
             <a href="#" class="follow-link">Follow Now</a>
@@ -116,7 +122,7 @@
         <a href="#" class="see-all-link">See All</a>
         <ul class="list people-list">
           <li class="people-item clearfix">
-            <div class="item-name">Dennis Adams</div>
+            <div class="item-name"><a href="#" class="item-link">Dennis Adams</a></div>
             <div class="item-img-wrapper left">
               <a href="#" class="item-img-link">
                 <img src="images/user_1_small.jpg" alt="img" width="80" height="80">
@@ -127,7 +133,7 @@
             <a href="#" class="add-link">Add Friend</a>
           </li>
           <li class="people-item clearfix">
-            <div class="item-name">Mary Carpenter</div>
+            <div class="item-name"><a href="#" class="item-link">Mary Carpenter</a></div>
             <div class="item-img-wrapper left">
               <a href="#" class="item-img-link">
                 <img src="images/user_2_small.jpg" alt="img" width="80" height="80">
@@ -138,7 +144,7 @@
             <a href="#" class="add-link">Add Friend</a>
           </li>
           <li class="people-item clearfix">
-            <div class="item-name">Danielle Salazar</div>
+            <div class="item-name"><a href="#" class="item-link">Danielle Salazar</a></div>
             <div class="item-img-wrapper left">
               <a href="#" class="item-img-link">
                 <img src="images/user_3_small.jpg" alt="img" width="80" height="80">
@@ -156,7 +162,7 @@
         <a href="#" class="see-all-link">See All</a>
         <ul class="list products-list">
           <li class="product-item clearfix">
-            <div class="item-name">Product Name</div>
+            <div class="item-name"><a href="#" class="item-link">Product Name</a></div>
             <div class="item-img-wrapper left">
               <a href="#" class="item-img-link">
                 <img src="images/product_1_small.jpg" alt="img" width="80" height="80">
@@ -165,7 +171,7 @@
             <div class="item-description">Product Short Description.<br>The quick brown fox jumps over the lazy dog.</div>
           </li>
           <li class="product-item clearfix">
-            <div class="item-name">Product Name</div>
+            <div class="item-name"><a href="#" class="item-link">Product Name</a></div>
             <div class="item-img-wrapper left">
               <a href="#" class="item-img-link">
                 <img src="images/product_2_small.jpg" alt="img" width="80" height="80">
@@ -179,7 +185,9 @@
       <section class="advertisement-section">
         <h4 class="section-header">Advertisement</h4>
         <div class="adv-img-wrapper">
-          <img src="images/advertisement_poster-2.jpg" alt="advertisement img" width="210" height="300">
+          <a href="#">
+            <img src="images/advertisement_poster-2.jpg" alt="advertisement img" width="210" height="300">
+          </a>
         </div>
         <footer class="adv-footer">Ads By Denteez.com</footer>
       </section>
@@ -191,92 +199,136 @@
 
       <ul class="services-list">
         <li class="service-item">
-          <div class="service-icon">icon</div>
-          <div class="service-name">Accountancy</div>
+          <a href="#">
+            <div class="service-icon">icon</div>
+            <div class="service-name">Accountancy</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon">icon</div>
-          <div class="service-name">Associations</div>
+          <a href="#">
+            <div class="service-icon">icon</div>
+            <div class="service-name">Associations</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon">icon</div>
-          <div class="service-name">Buy/Sell Dental Practice</div>
+          <a href="#">
+            <div class="service-icon">icon</div>
+            <div class="service-name">Buy/Sell Dental Practice</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Clinical Waste Collection</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Clinical Waste Collection</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Computer Service</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Computer Service</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">CPR/Basic Life Support Training</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">CPR/Basic Life Support Training</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Dental Recruitment</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Dental Recruitment</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Dental Software</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Dental Software</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Electrical Safety And Testing</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Electrical Safety And Testing</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Marketing</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Marketing</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Others</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Others</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Repairs</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Repairs</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Solicitors</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Solicitors</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Surgery Design</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Surgery Design</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Training & Courses</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Training & Courses</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Web Designers</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Web Designers</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Cleaning Agencies</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Cleaning Agencies</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Dental Chair Recovery</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Dental Chair Recovery</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Eqquipment Engineering</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Eqquipment Engineering</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Selling Gold</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Selling Gold</div>
+          </a>
         </li>
         <li class="service-item">
-          <div class="service-icon"></div>
-          <div class="service-name">Uniform & Workwear</div>
+          <a href="#">
+            <div class="service-icon"></div>
+            <div class="service-name">Uniform & Workwear</div>
+          </a>
         </li>
       </ul>
     </main>
   </div>
+  <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+  <script type="text/javascript" src="javascripts/application.js"></script>
 </body>
 
 </html>
