Add ajax for categories, error handler, modal and preloader

--- a/app/index.html
+++ b/app/index.html
@@ -6,6 +6,7 @@
   <title>abz.test</title>
   
   <!-- CSS -->
+  <link rel="stylesheet" type="text/css" href="stylesheets/vendor.min.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/application.min.css">
 </head>
 
@@ -197,10 +198,12 @@
       <h1 class="page-header">Service Directory</h1>
       <button class="btn btn-add-service">Add New Service</button>
 
-      <ul class="services-list">
-        <li class="service-item">
+      <ul class="services-list hidden">
+        <!-- <li class="service-item">
           <a href="#">
-            <div class="service-icon">icon</div>
+            <div class="service-icon">
+              <img src="images/icons/Shape_19.svg" alt="icon">
+            </div>
             <div class="service-name">Accountancy</div>
           </a>
         </li>
@@ -215,119 +218,17 @@
             <div class="service-icon">icon</div>
             <div class="service-name">Buy/Sell Dental Practice</div>
           </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Clinical Waste Collection</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Computer Service</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">CPR/Basic Life Support Training</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Dental Recruitment</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Dental Software</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Electrical Safety And Testing</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Marketing</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Others</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Repairs</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Solicitors</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Surgery Design</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Training & Courses</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Web Designers</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Cleaning Agencies</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Dental Chair Recovery</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Eqquipment Engineering</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Selling Gold</div>
-          </a>
-        </li>
-        <li class="service-item">
-          <a href="#">
-            <div class="service-icon"></div>
-            <div class="service-name">Uniform & Workwear</div>
-          </a>
-        </li>
+        </li> -->
       </ul>
     </main>
   </div>
-  <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+  <div id="preloader">
+  </div>
+  <div class="modal">
+    <h2 class="modal-header"></h2>
+    <p class="modal-text"></p>
+  </div>
+  <script type="text/javascript" src="javascripts/vendor.js"></script>
   <script type="text/javascript" src="javascripts/application.js"></script>
 </body>
 
