Refactor styles, add Logo.svg, delete static services icons

--- a/app/index.html
+++ b/app/index.html
@@ -16,7 +16,7 @@
       <div class="header-content">
         <div class="left-column ">
           <a href="#" class="logo-link">
-            <img src="images/logo.png" alt="logo" width="130" height="40">
+            <img src="images/icons/logo.svg" alt="logo" width="130" height="40">
           </a>
           <div class="icons-link-wrapper">
             <a href="#" class="notifications-link">Notifications</a>
@@ -70,11 +70,11 @@
         <footer class="adv-footer">Ads By Denteez.com</footer>
       </section>
 
-      <section class="featured-companies-section">
-        <h4 class="section-header">Featured Companies</h4>
+      <section class="media-section featured-companies-section">        
         <a href="#" class="see-all-link">See All</a>
+        <h4 class="section-header">Featured Companies</h4>
         <ul class="list companies-list">
-          <li class="companies-item clearfix">
+          <li class="list-item companies-item clearfix">
             <div class="item-img-wrapper left">
               <a href="#" class="item-img-link">
                 <img src="images/company_1_small.jpg" alt="img" width="80" height="80">
@@ -85,7 +85,7 @@
             <div class="item-location">Belgrade, Serbia</div>
             <a href="#" class="follow-link">Follow Now</a>
           </li>
-          <li class="companies-item clearfix">
+          <li class="list-item companies-item clearfix">
             <div class="item-img-wrapper left">
               <a href="#" class="item-img-link">
                 <img src="images/company_2_small.jpg" alt="img" width="80" height="80">
@@ -96,7 +96,7 @@
             <div class="item-location">New York, USA</div>
             <a href="#" class="follow-link">Follow Now</a>
           </li>
-          <li class="companies-item clearfix">
+          <li class="list-item companies-item clearfix">
             <div class="item-img-wrapper left">
               <a href="#" class="item-img-link">
                 <img src="images/company_3_small.jpg" alt="img" width="80" height="80">
@@ -118,11 +118,11 @@
     </aside>   
 
     <aside class="sidebar right">
-      <section class="people-section">
-        <h4 class="section-header">People you may know</h4>
+      <section class="media-section people-section">
         <a href="#" class="see-all-link">See All</a>
+        <h4 class="section-header">People you may know</h4>        
         <ul class="list people-list">
-          <li class="people-item clearfix">
+          <li class="list-item people-item clearfix">
             <div class="item-name"><a href="#" class="item-link">Dennis Adams</a></div>
             <div class="item-img-wrapper left">
               <a href="#" class="item-img-link">
@@ -133,7 +133,7 @@
             <div class="item-location">London, England</div>
             <a href="#" class="add-link">Add Friend</a>
           </li>
-          <li class="people-item clearfix">
+          <li class="list-item people-item clearfix">
             <div class="item-name"><a href="#" class="item-link">Mary Carpenter</a></div>
             <div class="item-img-wrapper left">
               <a href="#" class="item-img-link">
@@ -144,7 +144,7 @@
             <div class="item-location">Belgrade, Serbia</div>
             <a href="#" class="add-link">Add Friend</a>
           </li>
-          <li class="people-item clearfix">
+          <li class="list-item people-item clearfix">
             <div class="item-name"><a href="#" class="item-link">Danielle Salazar</a></div>
             <div class="item-img-wrapper left">
               <a href="#" class="item-img-link">
@@ -158,11 +158,11 @@
         </ul>
       </section>
 
-      <section class="featured-products-section">
-        <h4 class="section-header">Featured Products</h4>
+      <section class="media-section featured-products-section">
         <a href="#" class="see-all-link">See All</a>
+        <h4 class="section-header">Featured Products</h4>        
         <ul class="list products-list">
-          <li class="product-item clearfix">
+          <li class="list-item product-item clearfix">
             <div class="item-name"><a href="#" class="item-link">Product Name</a></div>
             <div class="item-img-wrapper left">
               <a href="#" class="item-img-link">
@@ -171,7 +171,7 @@
             </div>            
             <div class="item-description">Product Short Description.<br>The quick brown fox jumps over the lazy dog.</div>
           </li>
-          <li class="product-item clearfix">
+          <li class="list-item product-item clearfix">
             <div class="item-name"><a href="#" class="item-link">Product Name</a></div>
             <div class="item-img-wrapper left">
               <a href="#" class="item-img-link">
